# omega_egts

./: .coverage  .gitignore  CHANGELOG.md  CORE_AUDIT_REPORT.md  KNOWN_ISSUES.md  LOGGING_ANALYSIS.md  OMEGA_EGTS_AUDIT_REPORT.md  QWEN.md  README.md  compare_packets_with_reference.py  emulate_usv.py  emulate_usv_combined.py  emulate_usv_combined_build.py  emulate_usv_verification.py  opencode.json  package-lock.json  pyproject.toml  run_server.py  server_output.txt  test_cmw_commands.py  test_combined_verification_auth.py  test_combined_verification_auth_build.py  test_fixed_packet_generation.py  test_full_auth_scenario.py  test_integration_live.py  test_logging_system.py  test_server_with_emulator.py  test_verification_integration.py  test_verification_with_emulator.py
.qwen/: PROJECT_SUMMARY.md  settings.json
cli/: __init__.py  __main__.py  app.py
config/: settings.json
core/: __init__.py  cmw500.py  config.py  credentials.py  dispatcher.py  egts_adapter.py  engine.py  event_bus.py  export.py  logger.py  packet_source.py  pipeline.py  provisioner.py  python_logger.py  scenario.py  scenario_parser.py  session.py  tcp_server.py  test_session.py
core/validators/: __init__.py  auth_validator.py  service_info_validator.py
data/packets/: all_packets_correct_20260406_190414.json  hex_catalog.json  pure_hex_20260406_185510.txt  pure_hex_correct_20260406_190414.txt  roundtrip_report.json  scenario_report.json  statistics_20260406_185510.json  statistics_correct_20260406_190414.json
docs/: 1. Состав команд для конфигурирования (OK).xlsx  2. Передача траектории движения (ОК).xlsx  3. Передача профиля ускорения (ОК).xlsx  4. Передача обновлённого ПО (OK).xlsx  5. Передача настроек для УСВ (OK).xlsx  ARCHITECTURE.md  CHANGELOG.md  CMW500_SPEC.md  CMW500_STATUS_PLAN.md  CORE_IMPLEMENTATION_PLAN.md  FIX_RESPONSE_WITH_RECORD.md  GUI_MANUAL.md  GUI_MODULE.md  ISSUES_ANALYSIS.md  KnownIssues.md  NOTES.md  PACKETS_STATISTICS.md  PACKET_BUILD_RESEARCH.md  PLAN.md  PROGRESS.md  comands.txt  gost.md  plan.md  plan_refactoring.md  ТЗ на ПАК_3.txt  ТЗ_тестер_УСВ_v7.md
docs/design/: PLAN  design
examples/: debug_packets.py  demo_new_library.py  packet_field_comparison.py  packet_verification.py  parse_all_packets.py  receive_sms.py  send_sms.py  setup_dau.py  setup_gsm.py  setup_sms.py  show_one_packet.py  test_cmw_commands.py
gui/: layout.json  main.py  main_window.py  state.json
gui/bridge/: engine_wrapper.py  event_bridge.py
gui/core/: engine_wrapper.py  event_bridge.py
gui/dashboard/: __init__.py  card_base.py  container.py  layout_engine.py  persistence.py  sidebar.py
gui/dialogs/: about_dialog.py  packet_details.py  settings_dialog.py
gui/logs/: 2026-05-04.jsonl
gui/overlays/: scenario_editor.py
gui/resources/: styles.qss
gui/tabs/: connection_tab.py  editor_tab.py  export_tab.py  logs_tab.py  scenarios_tab.py
gui/tests/: test_container.py  test_main.py  test_persistence.py  test_theme.py
gui/utils/: port_checker.py  qt_log_handler.py  scenario_scanner.py  theme.py  validators.py
libs/: __init__.py
logs/: 2026-04-17.jsonl  2026-04-18.jsonl  2026-04-29.jsonl  2026-04-30.jsonl  20260422-134324.jsonl
omega_egts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scenarios/: README.md
scripts/: analyze_packets.py  analyze_sheets.py  check_file1.py  find_packet_boundaries.py  inspect_big_sheet.py  inspect_structure.py  packet_type_stats.py  show_test1.py  show_test2.py  show_test4.py
tests/: conftest.py  test_egts_models.py  test_egts_roundtrip.py  test_egts_stages_2_5.py  test_egts_subrecords.py  test_old_library_roundtrip.py
(+295 files in other folders)
