[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-egts"
version = "0.0.0"
description = "Серверный тестер УСВ — испытания на соответствие ГОСТ 33465/33464"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "OMEGA_EGTS Team"}
]
keywords = ["egts", "gost", "usv", "ecall", "cmw500", "navigation"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Асинхронность и сеть
    # asyncio — встроенный
    
    # EGTS протокол
    # struct, dataclasses — встроенные
    
    # CMW-500 (SCPI/VISA) — драйвер Rohde & Schwarz
    "pyvisa>=1.13.0",
    "pyvisa-py>=0.7.0",
    "RsCmwGsmSig>=3.7.30",
    
    # ASN.1 (для eCall/MSD)
    "asn1crypto>=1.5.1",
    
    # CRC
    "crc>=7.1.0",
]

[project.optional-dependencies]
dev = [
    # Тесты
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    
    # Линтер и форматирование
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    
    # Типы
    "types-setuptools",
]
gui = [
    "PyQt6>=6.6.0",
    # или
    # "PySide6>=6.6.0",
]
asn1 = [
    # ASN.1 PER кодек для eCall/MSD (ГОСТ 33464)
    "asn1tools>=0.163.0",
]

[project.scripts]
omega-egts = "cli.app:main"

[project.urls]
Homepage = "https://github.com/your-org/OMEGA_EGTS"
Documentation = "https://github.com/your-org/OMEGA_EGTS/docs"
Repository = "https://github.com/your-org/OMEGA_EGTS"
Issues = "https://github.com/your-org/OMEGA_EGTS/issues"

[tool.setuptools.packages.find]
include = ["core*", "cli*", "libs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=core",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit-тесты",
    "integration: Интеграционные тесты",
    "slow: Медленные тесты",
    "egts: Тесты EGTS-протокола",
    "fsm: Тесты конечного автомата",
    "cmw500: Тесты CMW-500",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["core", "cli", "libs"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line-length (управляется выше)
    "SIM108", # ternary operator — if/else читаемее для битовых операций
    "RUF001", # ambiguous characters — разрешаем кириллицу в строках
    "RUF002", # ambiguous characters — разрешаем кириллицу в docstring
    "RUF003", # ambiguous characters in comments — разрешаем кириллицу в комментариях
    "RUF043", # metacharacters in match — упрощение для pytest.match
    "SIM105", # contextlib.suppress — не работает с async (false positive для await)
    "UP037",  # quoted annotations — нужны для TYPE_CHECKING импортов
]

[tool.ruff.lint.isort]
known-first-party = ["core", "cli", "libs"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["core/", "cli/", "libs/"]
ignore_missing_imports = true
